[tool.poetry]
name = "uber_takehome"
version = "0.1.0"
description = ""
authors = ["Ethan <ethan.cychen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]
jinjalint = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
